# safeclipper

./: .gitignore  Cargo.toml  README.md
apps/macos/SafeClipper/: Package.swift  README.md  build-app.sh
apps/macos/SafeClipper/Sources/PrivacyFilterCore/: Models.swift  OPFNativeRuntimeClient.swift
apps/macos/SafeClipper/Sources/SafeClipperApp/: AppViewModel.swift  ContentView.swift  SafeClipperApp.swift
crates/safeclipper-cli/: Cargo.toml  build.rs
crates/safeclipper-cli/src/: lib.rs  macos_vision_ocr.m  main.rs
eval/: evaluate_opf_results.py  pyproject.toml
eval/desktop-pii/: README.md  run_eval.py
eval/desktop-pii/results/: .gitignore  safeclipper-desktop-pii-210-summary.json
eval/results/: qagen_eval_20.json  qagen_ocr_20.jsonl
models/: download-openai-privacy-filter-q4.sh
