[package]
name = "safeclipper-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "safeclipper"
path = "src/main.rs"

[lib]
name = "safeclipper_cli"
crate-type = ["rlib", "cdylib"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
ndarray = "0.17"
ort = { version = "2.0.0-rc.12", features = ["coreml"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokenizers = "0.23"

[build-dependencies]
cc = "1.2"
